# tools

./: Cargo.toml  README.md
src/bookgrep/: cache.rs  cli.rs  config.rs  error.rs  mod.rs  model.rs  output.rs
src/bookgrep/extractors/: epub.rs  mod.rs  ocr.rs  pdf.rs
src/bookgrep/metadata/: mod.rs  opf.rs
src/bookgrep/search/: matcher.rs  mod.rs  result.rs
src/bookgrep/sources/: local.rs  mod.rs  pcloud.rs
tests/: bookgrep_cli.rs
