[package]
name = "tools"
version = "0.1.0"
edition = "2024"
description = "Çok amaçlı Rust CLI araç koleksiyonu"
license = "MIT"
repository = "https://github.com/cengizkarakaya/tools"
homepage = "https://github.com/cengizkarakaya/tools"
default-run = "tools"
keywords = ["rust", "tools", "cli"]
categories = ["command-line-utilities"]
authors = ["Cengiz Karakaya <cengizkarakaya@hotmail.com>"]
rust-version = "1.95"

[workspace]
members = ["lib"]


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
directories = "6.0.0"
pdf-extract = "0.10.0"
quick-xml = "0.38.3"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }

[features]
default = ["local"]
local = []
pcloud = ["dep:tokio"]
index = []

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_NetworkManagement_WiFi"] }
